apps/kubernetes/k3s/apps/gatus/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus
  namespace: gatus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gatus.hughboi.vip`)
      kind: Rule
      services:
        - name: gatus
          port: 8080
  tls:
    secretName: hughboi-tls
